[package]
name = "cross-test"
version = "0.1.1-alpha.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"
description = "Native and web testing in a single framework"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cross-test"
repository    = "https://github.com/notdanilo/cross-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test = "0.3.19"
